--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query-devtools": "^5.66.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.14"
